One step to get JSON
App context is loading
When requesting JSON getting an error:The resource identified by this
request is only capable of generating responses with characteristics not
acceptable according to the request "accept" headers.

--- a/WebContent/WEB-INF/layouts/default.xml
+++ b/WebContent/WEB-INF/layouts/default.xml
@@ -53,9 +53,9 @@
 		<put-attribute name="content" value="/WEB-INF/tiles/list-of-patients.jsp"></put-attribute>
 	</definition>
 	
-	<definition name="doctors-schedule" extends="hippocrates.base">
+	<!-- <definition name="doctors-schedule" extends="hippocrates.base">
 		<put-attribute name="content" value="/WEB-INF/tiles/doctors-schedule.jsp"></put-attribute>
-	</definition>
+	</definition> -->
 	
 	<definition name="patients-info" extends="hippocrates.base">
 		<put-attribute name="content" value="/WEB-INF/tiles/patients-info.jsp"></put-attribute>
