Implemented "editing of schedule"
It is possible to edit the doctor's schedule.
On the editSchedule page one can see prechecked values of time which
correspond to the current schedule.
New Schedule is taking action starting from the closest monday
Only implemented for Monday

--- a/WebContent/WEB-INF/layouts/default.xml
+++ b/WebContent/WEB-INF/layouts/default.xml
@@ -105,5 +105,10 @@
 		<put-attribute name="content"
 			value="/WEB-INF/tiles/edit-schedule.jsp"></put-attribute>
 	</definition>
+	
+	<definition name="edition-completed" extends="hippocrates.base">
+		<put-attribute name="content"
+			value="/WEB-INF/tiles/edition-completed.jsp"></put-attribute>
+	</definition>
 
 </tiles-definitions>
